style.css
*, *::before, *::after {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
html{
    font-family: 'Roboto', sans-serif;
    font-size: 10px;
}
a{
    text-decoration: none;
    color: inherit;
}
.container{
    width: 100%;
    max-width: 120rem;
    margin: 0 auto;
    padding: 2rem;
}

/* header */
.header{
    width: 100%;
    height: 5rem;
    margin-bottom: 2rem;
}
.nav{
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 5rem;
}
.nav h1{
    font-size: 3.2rem;
}
.button{
    background-color: #F3F3F4;
    padding: 1rem 2rem;
    color: #363B42;
    font-size: 1.4rem;
    font-weight: 500;
    border-radius: 4px;
}
.new-book::before{
    content: '+';
    margin-right: 8px;
    font-size: 1.6rem;
}

/* main */
.card-group{
    display: flex;
    flex-wrap: wrap;
}
.card{
    position: relative;
    width: 26rem;
    height: 36rem;
    border-radius: 6px;
    /* background-color: #87DC9F; */
    padding: 3rem;
    margin-right: 2.5rem;
    margin-bottom: 2.5rem;
    background-color: lightgreen;
}
@media(max-width: 650px){
    .card-group{
        display: block;
        margin: 0 auto;
    }
    .card{
        display: block;
        margin: 0 auto;
        margin-bottom: 2.5rem;
    }
}
@media(min-width: 65px){
    .card-group{
        justify-content: start;
    }
}
.title{
    font-size: 2.2rem;
    font-weight: 900;
    letter-spacing: .5px;
}
.title::after{
    content: '__';
    display: block;
    font-weight: 400;
    margin-bottom: 2rem;
}
.author{
    font-size: 1.6rem;
    font-weight: 700;
    letter-spacing: .5px; 
}
.page-count{
    position: absolute;
    font-size: 1.4rem;
    font-weight: 400;
    bottom: 2.4rem;;
}

